date fixed and updated

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -6,7 +6,7 @@ categories:
   - Conferences
   - Events
 author: Brian Tarran
-date: last-modified
+date: 09/27/2023
 toc: true
 image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
@@ -119,7 +119,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Live from Chicago: Real World Data Science at posit::conf(2023)." Real World Data Science, September 19, 2023, updated September 20, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.html)
+: Tarran, Brian. 2023. "Live from Chicago: Real World Data Science at posit::conf(2023)." Real World Data Science, September 19, 2023, updated September 27, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.html)
 :::
 :::
 :::
