--- a/viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd
+++ b/viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd
@@ -12,7 +12,7 @@ toc: true
 image: images/rgirls.png
 image-alt: R-Girls logo layered on top of a classroom scene, rendered in bright pastel colours, created by Bing Image Creator.
 ---
-[R-Girls](https://rgirls.org.uk/) is an exciting new project launched by Greek Oak Academy, a faith-based independent secondary school for girls based in Birmingham, England. The project aims to promote the use of R in schools through the development and delivery of R-based lesson plans for a range of subjects.
+[R-Girls](https://rgirls.org.uk/) is an exciting new project launched by Green Oak Academy, a faith-based independent secondary school for girls based in Birmingham, England. The project aims to promote the use of R in schools through the development and delivery of R-based lesson plans for a range of subjects.
 
 To find out more about R-Girls, its origins and ambitions, Real World Data Science met with **Mohammed Mohammed**, a governor at Green Oak Academy, principal consultant for the National Health Service (NHS) Midlands and Lancashire Strategy Unit, and a founder of the NHS-R Community.
 
