--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -10,6 +10,8 @@ date: 09/27/2023
 toc: true
 image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
+filters:
+  - webr
 ---
 ## Tuesday, September 19
 ### From data confusion to data intelligence
@@ -93,6 +95,11 @@ During Long's insightful -- and frequently very funny -- talk, this slide appear
 ![JD Long's assertion #1.](images/jd-slide.PNG){fig-alt="JD Long's slide reads: 'The single biggest business value derived from the data science movement in the last 13 years is making it legitimate to code outside of IT roles.'"}
 
 Do you agree with Long's assertion? If you don't, what *is* the single biggest business value that's been derived from the data science movement? Share your thoughts in the comments below.
+
+```{webr-r}
+fit = lm(mpg ~ am, data = mtcars)
+summary(fit)
+```
 
 <!-- ### Talk title
 Add write-up here
