webr test success

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -10,6 +10,8 @@ date: 09/27/2023
 toc: true
 image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
+webr:
+  channel-type: "post-message"
 filters:
   - webr
 ---
