hide webr message

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -12,6 +12,7 @@ image: images/chicago-theatre.png
 image-alt: Chicago Theatre sign, illuminated at night.
 webr:
   channel-type: "post-message"
+  show-startup-message: false
 filters:
   - webr
 ---
