webr post added

--- a/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
+++ b/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd
@@ -73,6 +73,22 @@ On language barriers, he pointed out that learning to code in R and Python can b
 
 Dietrichson also has to deal with the problem of "arithmaphobia" among some of the liberal arts students he teaches. This has necessitated a reshuffling of the typical statistics curriculum, he said, in order to make it easier for students to access. But the work is worth it, Dietrichson explained: many of his students want to work in careers like journalism, and he believes that "journalists should be statistically literate".
 
+### Dynamic Interactions: Empowering Educators and Researchers with Interactive Quarto Documents Using webR
+Some of my favourite sessions at posit::conf(2023) were about [Quarto](https://quarto.org/). Understandable, really, when you consider that we used it to build this very site! Albert Rapp has described Quarto as a [web dev gateway drug](https://albert-rapp.de/posts/16_html_css_for_r/16_html_css_for_r.html), and I'd agree with him:
+
+> Quarto is a powerful tool for creating beautiful and interactive documents. I think of it as a gateway drug to web development: While it offers a user-friendly interface for creating documents and blogs, it also allows users to delve into the world of HTML & CSS without even realizing it.
+
+I spoke a bit about my own journey into web dev in one of the Quarto sessions at posit::conf, but what I loved most about these sessions was learning about all the cool new things I've yet to discover and try out. For example, James Balamuta's talk and demonstration of building interactive code cells into Quarto webpages was an eye-opener!
+
+Since returning from Chicago I've tested out this functionality and added Balamuta's example here. First run the code that's already in the code block but also edit it to try out your own examples.
+
+```{webr-r}
+fit = lm(mpg ~ am, data = mtcars)
+summary(fit)
+```
+
+Visit the [quarto-webr website](https://quarto-webr.thecoatlessprofessor.com/) for details on how to make full use of this capability. Once you're up to speed, why not [contribute a webR-enabled article for Real World Data Science](https://realworlddatascience.net/contributor-docs/contributor-guidelines.html)?
+
 <!-- ### Talk title
 Add write-up here
 
@@ -98,11 +114,6 @@ During Long's insightful -- and frequently very funny -- talk, this slide appear
 ![JD Long's assertion #1.](images/jd-slide.PNG){fig-alt="JD Long's slide reads: 'The single biggest business value derived from the data science movement in the last 13 years is making it legitimate to code outside of IT roles.'"}
 
 Do you agree with Long's assertion? If you don't, what *is* the single biggest business value that's been derived from the data science movement? Share your thoughts in the comments below.
-
-```{webr-r}
-fit = lm(mpg ~ am, data = mtcars)
-summary(fit)
-```
 
 <!-- ### Talk title
 Add write-up here
