--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!rgirls-interview.qmd"
+    - "!positconf-blog.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -125,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'What if we try to bring R to the classroom? That was our wacky idea'
-R-Girls is a new project aiming to introduce R into secondary school lessons -- just not through computer science classes! Real World Data Science meets with one of the project's founders, Mohammed Mohammed, to learn more.
+## Live from Chicago: Real World Data Science at posit::conf(2023)
+This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read on for key takeaways from a selection of talks and sessions covering open source LLMs, documentation, teaching data science, generative art, and AI pair programming.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/interviews/posts/2023/09/25/images/rgirls.png)
+![](viewpoints/editors-blog/posts/2023/09/19/images/chicago-sunset.png)
 :::
 :::
 
