--- a/index.qmd
+++ b/index.qmd
@@ -253,9 +253,15 @@ Discover the full story of the 'Food for Thought Challenge'
 ::: grid
 
 
-::: {.g-col-12 .g-col-md-6}
+::: {.g-col-12 .g-col-md-3}
 ### Published by
 [![](images/rss-logo-footer.png)](https://rss.org.uk/)
+:::
+::: {.g-col-12 .g-col-md-2}
+### Our partners
+[![](images/rss-logo-footer.png)](https://www.amstat.org/)
+:::
+::: {.g-col-12 .g-col-md-1}
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### About us
