--- a/index.qmd
+++ b/index.qmd
@@ -255,11 +255,11 @@ Discover the full story of the 'Food for Thought Challenge'
 
 ::: {.g-col-12 .g-col-md-3}
 ### Published by
-[![](images/rss-logo-footer.png)](https://rss.org.uk/)
+[![](images/rss-white-logo-cropped.png){fig-align="left"}](https://rss.org.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Our partners
-[![](images/rss-logo-footer.png)](https://www.amstat.org/)
+[![](images/asa-logo-footer.png){fig-align="left"}](https://www.amstat.org/)
 :::
 ::: {.g-col-12 .g-col-md-1}
 :::
