homepage logos and intro updated, GA off

--- a/index.qmd
+++ b/index.qmd
@@ -145,7 +145,7 @@ This year's posit::conf has come to a close, and we had a great time in Chicago 
 ::: {.header-text} 
 ::: {.content-container}
 ::: {.header-block}
-Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
+Welcome to **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/), in partnership with the [American Statistical Association](https://www.amstat.org/). We bring together data science students, practitioners, leaders, and educators to share knowledge, learn from, and be inspired by real-world applications of data science.
 :::
 :::
 :::
@@ -255,7 +255,7 @@ Discover the full story of the 'Food for Thought Challenge'
 
 ::: {.g-col-12 .g-col-md-3}
 ### Published by
-[![](images/rss-white-logo-cropped.png){fig-align="left"}](https://rss.org.uk/)
+[![](images/rss-logo-footer.png){fig-align="left"}](https://rss.org.uk/)
 :::
 ::: {.g-col-12 .g-col-md-2}
 ### Our partners
