top story intro text amended

--- a/index.qmd
+++ b/index.qmd
@@ -130,7 +130,7 @@ toc: false
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
 ## Live from Chicago: Real World Data Science at posit::conf(2023)
-This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read on for key takeaways from a selection of talks and sessions covering open source LLMs, documentation, teaching data science, generative art, and AI pair programming.
+This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read on for key takeaways from a selection of talks and sessions covering open source LLMs, documentation, data science education, generative art, and AI pair programming.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
 ![](viewpoints/editors-blog/posts/2023/09/19/images/chicago-sunset.png)
