blog added to homepage

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!positconf-blog.qmd"
+    - "!asa-partner.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -125,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/09/19/positconf-blog.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/10/02/asa-partner.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Live from Chicago: Real World Data Science at posit::conf(2023)
-This year's posit::conf has come to a close, and we had a great time in Chicago learning about data science software, ideas, and applications. Read on for key takeaways from a selection of talks and sessions covering open source LLMs, documentation, teaching data science, generative art, and AI pair programming.
+## American Statistical Association joins Real World Data Science as partner
+The first version of Real World Data Science was launched almost one year ago by the Royal Statistical Society. As we approach our first birthday, we’re delighted to announce that the American Statistical Association has become a partner in this project. Welcome, ASA! 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/09/19/images/chicago-sunset.png)
+![](viewpoints/editors-blog/posts/2023/10/02/images/laptop-connect.png)
 :::
 :::
 
