partner page updated

--- a/rwds-partners.qmd
+++ b/rwds-partners.qmd
@@ -5,8 +5,8 @@ page-layout: article
 toc: false
 title-block-banner: true
 ---
-
-## The Royal Statistical Society
+## Publisher
+##### Royal Statistical Society
 Real World Data Science is a project of the [Royal Statistical Society](https://rss.org.uk/) (RSS). The Society was founded in 1834 and is one of the world’s leading organisations advocating for the importance of statistics and data. 
 
 RSS has more than 10,000 members in the UK and across the world. As a charity, it advocates for the key role of statistics and data in society, and works to ensure that policy formulation and decision making are informed by evidence for the public good.
@@ -14,3 +14,13 @@ RSS has more than 10,000 members in the UK and across the world. As a charity, i
 To support the work of the RSS, including Real World Data Science and other projects, [become a member today](https://rss.org.uk/membership/join-now/). 
 
 **Email:** [info@rss.org.uk](mailto:info@rss.org.uk)
+
+## Partners
+##### American Statistical Association
+The [American Statistical Association](https://www.amstat.org/) is the world’s largest community of statisticians, the “Big Tent for Statistics.” It is the second-oldest, continuously operating professional association in the US. Since it was founded in Boston in 1839, the ASA has supported excellence in the development, application, and dissemination of statistical science through meetings, member services, education, publications, advocacy, and accreditation. 
+
+Our members serve in industry, government, and academia in more than 90 countries, advancing research and promoting sound statistical practice to inform public policy and improve human welfare. 
+
+To support the work of the ASA, [become a member today](https://www.amstat.org/membership/become-a-member/membership-options?hkey=0301def8-92e1-4bf2-9aff-02959b3e61f5). 
+
+**Email:** [asainfo@amstat.org](mailto:asainfo@amstat.org) 
