--- a/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd
+++ b/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd
@@ -1,7 +1,7 @@
 ---
 title: "'I fell in love with math, really, and fell into data science because of that'"
 description: |
-  A passion for solving mathematical problems led Niclas Thomas to a PhD in machine learning and then a career in data science in the retail sphere. Now head of data science for Next, Thomas reflects on his career journey so far.
+  A passion for solving mathematical problems led Niclas Thomas to a PhD in machine learning and then a career in data science in the retail sphere. Now head of data science for clothing retailer Next, Thomas reflects on his career journey so far.
 categories:
   - Leadership
   - Management
@@ -16,7 +16,7 @@ A passion for maths and solving mathematical problems led Niclas Thomas to a PhD
 
 In this interview with Real World Data Science, Thomas reflects on his career journey so far, from hands-on coding work to team leadership and management. He also argues for the importance of communication and storytelling as part of the data science skill set.
 
-{{< video replace >}}
+<!-- {{< video replace >}} -->
 
 ## Transcript
 
