--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!asa-partner.qmd"
+    - "!niclas-thomas.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -125,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/10/02/asa-partner.qmd">
+<a href="/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## American Statistical Association joins Real World Data Science as partner
-The first version of Real World Data Science was launched almost one year ago by the Royal Statistical Society. As we approach our first birthday, we’re delighted to announce that the American Statistical Association has become a partner in this project. Welcome, ASA! 
+## 'I fell in love with math, really, and fell into data science because of that'
+A passion for solving mathematical problems led Niclas Thomas to a PhD in machine learning and then a career in data science in the retail sphere. Now head of data science for clothing retailer Next, Thomas reflects on his career journey so far. 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/10/02/images/laptop-connect.png)
+![](careers/career-profiles/posts/2023/10/04/images/niclas-thomas.png)
 :::
 :::
 
@@ -168,11 +168,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## The opaque nature of AI technology poses serious challenges to legal systems which have been built around individual or human accountability. On a more fundamental level, basic human rights are threatened, as legal accountability is blurred by the maze of technology placed between perpetrators and the various forms of discrimination that can be conveniently blamed on the machine.
-Arshin Adib-Moghaddam, author, *Is Artificial Intelligence Racist?*
+## Pseudo data science is a term we use to describe attempts to pass off crude work as being more data science-y than it really is. That reflects a sense in public life that data science is new, innovative, somehow the Future. In this context, people who are not data scientists can be tempted to dress themselves up in the clothes of data science to enhance their credibility. The trouble is, it can sometimes backfire.
+Ed Humpherson on how not to be misleading
 
 ::: {.button}
-[Read the full article](viewpoints/posts/2023/09/06/biased-algorithms.qmd)
+[Read the full article](viewpoints/posts/2023/09/18/pseudo-data-science.qmd)
 :::
 
 :::
@@ -210,11 +210,11 @@ Arshin Adib-Moghaddam, author, *Is Artificial Intelligence Racist?*
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## The Purchase to Plate Crosswalk is a key tool for understanding the healthfulness of retail food purchases in the US and it does this by linking scanner data on what people buy with data on the nutritional content of those foods. But there's a catch: scanner data is collected about hundreds of thousands of food products, whereas nutritional profile information is available for only a few thousand items -- giving rise to a one-to-many matching problem that takes several hundred person-hours to resolve. What if machine learning can help?
-Discover the full story of the 'Food for Thought Challenge' 
+## The opaque nature of AI technology poses serious challenges to legal systems which have been built around individual or human accountability. On a more fundamental level, basic human rights are threatened, as legal accountability is blurred by the maze of technology placed between perpetrators and the various forms of discrimination that can be conveniently blamed on the machine.
+Arshin Adib-Moghaddam, author, *Is Artificial Intelligence Racist?*
 
 ::: {.button}
-[Read the case study collection](case-studies/posts/2023/08/21/00-food-for-thought.qmd)
+[Read the full article](viewpoints/posts/2023/09/06/biased-algorithms.qmd)
 :::
 
 :::
