--- a/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd
+++ b/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd
@@ -16,7 +16,7 @@ A passion for maths and solving mathematical problems led Niclas Thomas to a PhD
 
 In this interview with Real World Data Science, Thomas reflects on his career journey so far, from hands-on coding work to team leadership and management. He also argues for the importance of communication and storytelling as part of the data science skill set.
 
-<!-- {{< video replace >}} -->
+{{< video https://www.youtube.com/embed/0y6yye1A9vU?si=oea60bsc8r83icom >}}
 
 ## Transcript
 
