--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!niclas-thomas.qmd"
+    - "!october-events.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -125,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/career-profiles/posts/2023/10/04/niclas-thomas.qmd">
+<a href="/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## 'I fell in love with math, really, and fell into data science because of that'
-A passion for solving mathematical problems led Niclas Thomas to a PhD in machine learning and then a career in data science in the retail sphere. Now head of data science for clothing retailer Next, Thomas reflects on his career journey so far. 
+## Join Real World Data Science at three events this October!
+An introduction to Real World Data Science as part of RSS Members' Week; a keynote talk at the NHS-R Community Annual Conference; and a panel debate on AI evaluation, exploring how data science and statistics can help make sense of AI models. Halloween costumes not required. Read on for details...  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/career-profiles/posts/2023/10/04/images/niclas-thomas.png)
+![](viewpoints/editors-blog/posts/2023/10/10/images/oct-events.png)
 :::
 :::
 
