--- a/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd
+++ b/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Come and meet Real World Data Science in person and online this October!"
+title: "Join Real World Data Science at three events this October!"
 description: |
-  We're participating in three big events this month, and we'd love for you to join us! Halloween costumes not required...
+  An introduction to Real World Data Science as part of RSS Members' Week; a keynote talk at the NHS-R Community Annual Conference; and a panel debate on AI evaluation, exploring how data science and statistics can help make sense of AI models. Halloween costumes not required...
 categories:
   - AI
   - Large language models
@@ -60,7 +60,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tarran, Brian. 2023. "Come and meet Real World Data Science in person and online this October!" Real World Data Science, October 10, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/10/10/october-events.html)
+: Tarran, Brian. 2023. "Join Real World Data Science at three events this October!" Real World Data Science, October 10, 2023. [URL](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/10/10/october-events.html)
 :::
 :::
 :::
