--- a/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd
+++ b/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd
@@ -24,12 +24,12 @@ Next week is Members' Week at the Royal Statistical Society (RSS), and the RSS c
 Chances are, if you're reading this blog, you won't need much of an introduction to Real World Data Science. But do please help spread the word to potential new readers, and encourage them to [register for this free event](https://rss.org.uk/training-events/events/events-2023/rss-events/the-real-world-data-science/).
 
 ### NHS-R Community Annual Conference
-**Date:** Tuesday, October 17, 2023 **Time:** 9:30 am -- 10:00 am **Location:** Birmingham (in person) and online
+**Date:** Tuesday, October 17, 2023 **Time:** 9:30 am -- 10:00 am **Location:** Edgbaston Stadium, Birmingham (in person) and online
 
 It's a real honour for us to be invited to give a keynote talk at [this annual gathering of the NHS-R Community](https://nhsrcommunity.com/events/nhs-r-community-conference-2023-ticket-for-in-person-attendance-on-tuesday-17th-october-2023/), a group dedicated to promoting the use of R in the National Health Service. Our talk is titled, "Forging community links: NHS-R, the Royal Statistical Society and Real World Data Science," and we'll explain how the Real World Data Science project came about, how we embraced open-source tools and the idea of collaborative content development, and why there's so much to be gained from sharing data science case studies across domains.
 
 ### Evaluating artificial intelligence: How data science and statistics can make sense of AI models
-**Date:** Tuesday, October 31, 2023 **Time:** 4 pm -- 6 pm **Location:** RSS, London
+**Date:** Tuesday, October 31, 2023 **Time:** 4 pm -- 6 pm **Location:** RSS, London (in person only)
 
 Real World Data Science has partnered with colleagues and volunteers across the RSS to organise another [AI panel debate](https://rss.org.uk/training-events/events/events-2023/rss-events/evaluating-artificial-intelligence-how-data-scienc/#fulleventinfo), following up on the AI discussion at the [RSS Annual Conference](https://realworlddatascience.net/viewpoints/editors-blog/posts/2023/08/24/rss-conference.html).
 
