transcript uploaded, homepage updated

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!october-events.qmd"
+    - "!data-sharing-in-gov.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -125,15 +125,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/viewpoints/editors-blog/posts/2023/10/10/october-events.qmd">
+<a href="/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Join Real World Data Science at three events this October!
-An introduction to Real World Data Science as part of RSS Members' Week; a keynote talk at the NHS-R Community Annual Conference; and a panel debate on AI evaluation, exploring how data science and statistics can help make sense of AI models. Halloween costumes not required. Read on for details...  
+## 'Feelings about sharing data can be context and time dependent -- you can't just do one survey or focus group'
+Real World Data Science sits down with Helen Miller-Bakewell of the UK Office for Statistics Regulation to talk data sharing and linkage in government -- progress made, hurdles to overcome, the importance of public engagement, and why 'social licence' is key.  
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](viewpoints/editors-blog/posts/2023/10/10/images/oct-events.png)
+![](viewpoints/interviews/posts/2023/10/16/images/helen-miller-bakewell.png)
 :::
 :::
 
@@ -168,11 +168,11 @@ Welcome to **Real World Data Science**, a new project from the [Royal Statistica
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## Pseudo data science is a term we use to describe attempts to pass off crude work as being more data science-y than it really is. That reflects a sense in public life that data science is new, innovative, somehow the Future. In this context, people who are not data scientists can be tempted to dress themselves up in the clothes of data science to enhance their credibility. The trouble is, it can sometimes backfire.
-Ed Humpherson on how not to be misleading
+## One key thing to note is that we didn’t set out to teach programming. The history of computer science in our school is that computer science was really not liked at all by the girls. They wouldn’t choose it as a subject to pursue further. So, we decided to use R to support other subjects. This was a key strategic decision, really.
+Mohammed Mohammed on creating the R-Girls School Network
 
 ::: {.button}
-[Read the full article](viewpoints/posts/2023/09/18/pseudo-data-science.qmd)
+[Learn more about the R-Girls project](viewpoints/interviews/posts/2023/09/25/rgirls-interview.qmd)
 :::
 
 :::
@@ -210,11 +210,11 @@ Ed Humpherson on how not to be misleading
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## The opaque nature of AI technology poses serious challenges to legal systems which have been built around individual or human accountability. On a more fundamental level, basic human rights are threatened, as legal accountability is blurred by the maze of technology placed between perpetrators and the various forms of discrimination that can be conveniently blamed on the machine.
-Arshin Adib-Moghaddam, author, *Is Artificial Intelligence Racist?*
+## Pseudo data science is a term we use to describe attempts to pass off crude work as being more data science-y than it really is. That reflects a sense in public life that data science is new, innovative, somehow the Future. In this context, people who are not data scientists can be tempted to dress themselves up in the clothes of data science to enhance their credibility. The trouble is, it can sometimes backfire.
+Ed Humpherson on how not to be misleading
 
 ::: {.button}
-[Read the full article](viewpoints/posts/2023/09/06/biased-algorithms.qmd)
+[Read the full article](viewpoints/posts/2023/09/18/pseudo-data-science.qmd)
 :::
 
 :::
