video url added

--- a/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
+++ b/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
@@ -18,7 +18,7 @@ The report also warns that "unless significant changes are implemented... progre
 
 To find out more about the report and its recommendations for change, we sat down with Helen Miller-Bakewell, OSR's head of impact and development. Listen to the full interview below or on YouTube.
 
-{{< video [add link] >}}
+{{< video https://www.youtube.com/embed/72eqvS34n7c?si=tzoiivVk-m4su1aT >}}
 
 ## Transcript
 
