removed comma, fixed URL

--- a/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
+++ b/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.qmd
@@ -12,7 +12,7 @@ toc: true
 image: images/helen-miller-bakewell.png
 image-alt: Photo of Helen Miller-Bakewell.
 ---
-This summer, the UK Office for Statistics Regulation (OSR) published its report on [Data Sharing and Linkage for the Public Good](https://osr.statisticsauthority.gov.uk/publication/data-sharing-and-linkage-for-the-public-good/). In the report, the OSR notes that the value of sharing and linking data has become widely recognised within government, though there remain areas of challenge, and uncertainties about "the public's attitude to, and confidence in, data sharing." 
+This summer, the UK Office for Statistics Regulation (OSR) published its report on [Data Sharing and Linkage for the Public Good](https://osr.statisticsauthority.gov.uk/publication/data-sharing-and-linkage-for-the-public-good/). In the report, the OSR notes that the value of sharing and linking data has become widely recognised within government, though there remain areas of challenge and uncertainties about "the public's attitude to, and confidence in, data sharing." 
 
 The report also warns that "unless significant changes are implemented... progress that has been made could be lost and the potential for data sharing and linkage to deliver public good will not be achieved." 
 
@@ -135,7 +135,7 @@ Copyright and licence
 ::: {.g-col-12 .g-col-md-6}
 
 How to cite
-:   Tarran, Brian. 2023. "'Feelings about sharing data can be context and time dependent -- you can't just do one survey or focus group.'" Real World Data Science, October 16, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/06/data-sharing-in-gov.html)
+:   Tarran, Brian. 2023. "'Feelings about sharing data can be context and time dependent -- you can't just do one survey or focus group.'" Real World Data Science, October 16, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/2023/10/16/data-sharing-in-gov.html)
 :::
 :::
 :::
